# nature

./: .gitignore  README.md  pyproject.toml
nature/: setup.py
nature/nature/: __init__.py  nature.py
nature/nature.egg-info/: PKG-INFO  SOURCES.txt
src/nature/: __init__.py  args_spec.py  equity.py  functions.py  model_metadata.py  nature.py  rasterops.py  zonal_statistics.py
src/nature/archive/: misc.py
src/nature/data/: __init__.py
src/nature/data/colormaps/: bivariate.csv  trivariate.csv
src/nature/models/: monthly_ucm.py  ucm_valuation.py  who5_mental_health.py
src/nature/mv/: model_metadata.py  nci_pollination.py  nci_urban_cooling.py
src/nature/parameterization/: __init__.py  carbon.py  ndr.py  param_utils.py  pollination.py  sdr.py
src/nature/parameterization/data/: management_practice_filter__nlcd.csv  management_practices__nlud_simple.csv
src/nature/parameterization/nlud/: nlcd.py
src/nature/valuation/: __init__.py  ucm_valuation.py
tests/: testing.py
tests/configs/: tests.yaml
tests/nature/: testing.py
tests/nature/configs/: tests.yaml
